2010-09-07  Satish Sampath  <satish@chromium.org>

Reviewed by Steve Block.

        Fix speech button's hit test logic for RTL rendering.
        https://bugs.webkit.org/show_bug.cgi?id=45288

        * fast/speech/input-text-speechbutton.html: Added RTL test case and merged JS code.
        * fast/speech/script-tests/input-text-speechbutton.js: Removed.
2010-09-07  Satish Sampath  <satish@chromium.org>

        Reviewed by Steve Block.

        Fix speech button's hit test logic for RTL rendering.
        https://bugs.webkit.org/show_bug.cgi?id=45288

        * rendering/RenderTextControlSingleLine.cpp:
        (WebCore::RenderTextControlSingleLine::forwardEvent):

Canonical link: https://commits.webkit.org/57637@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66879 268f45cc-cd09-0410-ab3c-d52691b4dbfc